force-app/main/default/objects/sc_ext__Filter_Set__c/sc_ext__Filter_Set__c.object-meta.xml
<CustomObject>
    <label>Filter Set</label>
    <nameField>
        <label>Filter Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>