force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Compliance_Categorization__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Compliance_Categorization__c</fullName>
    <label>Compliance Categorization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Categorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>