force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Owner__c</fullName>
    <label>Data Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>