force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Type__c</fullName>
    <label>Data Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>