force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Field_Type__c</fullName>
    <label>Field Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>