force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Field_Usage__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Field_Usage__c</fullName>
    <label>Field Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Usage Assigned</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>DeprecateCandidate</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>