force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Fields_Modified_Since__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Fields_Modified_Since__c</fullName>
    <label>Fields Modified Since</label>
    <type>Date</type>
</CustomField>