force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Include_Fields_with_Object_Limitations__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Include_Fields_with_Object_Limitations__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Include Fields with Object Limitations</label>
    <type>Checkbox</type>
</CustomField>