force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Last_Classified_By__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Last_Classified_By__c</fullName>
    <label>Last Classified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>