force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Managed_Packages__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Managed_Packages__c</fullName>
    <label>Managed Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>