force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Number_of_Total_Records_Max__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Number_of_Total_Records_Max__c</fullName>
    <label>Number of Total Records Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>