force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Object_Api_Name_or_Label_Contains__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Object_Api_Name_or_Label_Contains__c</fullName>
    <label>Object Api Name or Label Contains</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>