force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Object_Types__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Object_Types__c</fullName>
    <label>Object Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Custom Metadata Type</fullName>
            </value>
            <value>
                <fullName>Custom Setting</fullName>
            </value>
            <value>
                <fullName>External Object</fullName>
            </value>
            <value>
                <fullName>Historical Data</fullName>
            </value>
            <value>
                <fullName>Knowledge Article</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>