force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Objects__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Objects__c</fullName>
    <label>Objects</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>