force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Percent_of_Records_Filled_Max__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Percent_of_Records_Filled_Max__c</fullName>
    <label>Percent of Records Filled Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>