force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Sensitivity_Levels__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Sensitivity_Levels__c</fullName>
    <label>Sensitivity Levels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Classified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>