force-app/main/default/objects/sc_ext__Filter_Set__c/fields/sc_ext__Show_Only_Fields_with_No_Records__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Show_Only_Fields_with_No_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Only Fields with No Records</label>
    <type>Checkbox</type>
</CustomField>