force-app/main/default/objects/sc_ext__Filter_Set__c/recordTypes/sc_ext__DC_Fields.recordType-meta.xml
<RecordType>
    <fullName>sc_ext__DC_Fields</fullName>
    <active>true</active>
    <label>DC Fields</label>
</RecordType>