force-app/main/default/objects/sc_ext__Filter_Set__c/recordTypes/sc_ext__DC_Objects.recordType-meta.xml
<RecordType>
    <fullName>sc_ext__DC_Objects</fullName>
    <active>true</active>
    <label>DC Objects</label>
</RecordType>